--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,3 +2,4 @@ include: package:flutter_lints/flutter.yaml
 analyzer:
   errors:
     avoid_print: ignore
+    no_leading_underscores_for_local_identifiers: ignore
