--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   http: any
   cloud_firestore: ^5.6.7
   image_picker: ^1.0.4
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
