--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   image_picker: ^1.0.4
   uuid: ^4.5.1
   flutter_dotenv: ^5.1.0
+  google_maps_flutter: ^2.5.0
+  location: ^5.0.0
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
