--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   table_calendar: ^3.2.0
   intl: ^0.20.2
   firebase_core: ^3.13.0
+  firebase_storage: ^12.0.0
   firebase_auth: ^5.5.3
   google_sign_in: ^6.3.0
   flutter_launcher_icons: ^0.13.1
