--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   googleapis: ^14.0.0
   googleapis_auth: ^1.3.1
   shared_preferences: ^2.5.3
+  flutter_image_compress: ^2.1.0
 
 dev_dependencies:
   flutter_test:
