--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   location: ^5.0.0
   geolocator: ^11.0.0
+  firebase_messaging: ^15.2.6
 
 dev_dependencies:
   flutter_test:
